deploy/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: demo-api-dmisiuk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: demo-api
          image: ghcr.io/dmisiuk/node-express-boilerplate:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 125m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo-api-dmisiuk
spec:
  selector:
    app: demo-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api
  namespace: demo-api-dmisiuk
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: demo-api.openfab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api
                port:
                  number: 80
